<resources>
    <string name="app_name">sfaApp</string>
    <string name="academic_concerns">Academic concerns</string>
    <string name="behavior_concerns">Behavior concerns</string>
    <string name="education_laws">Education laws</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="paragraph_on_academics">
		 "Common Academic Concerns Reading\n\n
    "Reading plays a crucial role in a child\'s educational journey and parents may encounter various academic concerns related to their child\'s reading abilities. While each child\'s reading development is unique here are some common academic concerns that parents may come across\n\n"
    "Difficulty with Phonics Some children may struggle with phonics which involves understanding the relationship between sounds and letters. This can make it challenging for them to decode words and affect their reading fluency. Parents can support their child by practicing phonics skills through interactive games reading aloud together and providing access to phonics-based resources\n\n"
    "Limited Vocabulary A limited vocabulary can hinder a child\'s reading comprehension and overall reading ability. Parents can help expand their child\'s vocabulary by reading a variety of books together discussing new words and encouraging independent reading. Regular conversations and exposure to a rich language environment are also valuable in enhancing vocabulary skills\n\n"
    "Struggling with Comprehension Some children may have difficulty understanding and retaining what they read. This could be due to challenges with decoding limited background knowledge or lack of effective reading strategies. Parents can support their child by engaging in meaningful discussions about the reading material asking questions to check comprehension and providing opportunities for practicing summarization and making connections to real-life situations\n\n"
    "Slow Reading Pace Slow reading pace can impact a child\'s ability to complete reading assignments within a reasonable timeframe. Parents can assist by encouraging regular reading practice breaking down reading tasks into smaller chunks and using techniques such as timed reading sessions or reading aloud to improve reading speed and fluency\n\n"
    "Lack of Interest or Engagement Some children may show disinterest or lack of engagement in reading activities which can hinder their progress. Parents can help foster a love for reading by offering a variety of reading materials that align with their child\'s interests providing a cozy reading environment and modeling reading behavior by reading alongside their child. Additionally connecting reading to real-life experiences and incorporating technology-based reading resources can enhance engagement\n\n"
    "Difficulty with Reading Comprehension Tests Reading comprehension tests require students to analyze and interpret texts effectively. If a child struggles with these tests parents can guide them by practicing specific comprehension strategies such as predicting visualizing questioning and summarizing. It can also be beneficial to review test-taking skills such as managing time and understanding question formats\n\n"
    "Remember that each child\'s reading journey is unique and progress may vary. Patience support and consistent practice are key to addressing academic concerns related to reading. It is important to collaborate with teachers utilize available educational resources and consider seeking additional assistance from educators or reading specialists when necessary\n\n"
    "Common Academic Concerns Writing\n\n"
    "Writing skills are fundamental for academic success and effective communication. Parents may encounter various academic concerns related to their child\'s writing abilities. While each child\'s writing development is unique here are some common academic concerns that parents may come across\n\n"
    "Poor Handwriting Some children may struggle with legible handwriting which can impact their ability to express their thoughts and ideas effectively. Parents can assist their child by providing opportunities for fine motor skill development practicing handwriting exercises and exploring alternative writing tools such as word processors or speech-to-text software\n\n"
    "Difficulty with Spelling Spelling challenges can hinder a child\'s writing fluency and accuracy. Parents can support their child by encouraging regular spelling practice using mnemonic techniques creating word lists for targeted practice and providing access to spelling resources such as dictionaries or spell-check tools\n\n"
    "Limited Vocabulary A limited vocabulary can restrict a child\'s ability to express themselves and convey their ideas in writing. Parents can help expand their child\'s vocabulary by encouraging reading engaging in meaningful conversations and introducing new words through activities such as word games word-of-the-day exercises or vocabulary-building apps\n\n"
    "Poor Sentence Structure and Grammar Difficulties with sentence structure and grammar can affect the clarity and coherence of a child\'s writing. Parents can assist by reviewing grammar rules together providing constructive feedback on sentence construction and encouraging proofreading and editing practices. Online grammar resources and grammar-checking tools can also be beneficial\n\n"
    "Weak Organization and Structure Some children may struggle with organizing their thoughts and structuring their writing effectively. Parents can support their child by teaching and modeling pre-writing strategies such as brainstorming and outlining and providing guidance on structuring paragraphs and essays. Additionally encouraging revision and peer review can help enhance organizational skills\n\n"
    "Lack of Creativity or Expression Some children may face challenges in expressing their ideas creatively or with clarity. Parents can foster creativity by encouraging imagination providing writing prompts or storytelling activities and celebrating their child\'s unique ideas and perspectives. Offering opportunities for self-expression through journaling or creative writing exercises can also be beneficial\n\n"
    "Difficulty with Writing Assignments Writing assignments with specific requirements and guidelines can be overwhelming for some children. Parents can assist by breaking down the task into manageable steps providing structure and guidance and offering support in researching and organizing information. Encouraging time management skills and creating a quiet and conducive writing environment can also be helpful\n\n"
    "Remember that writing skills develop over time with practice and support. Each child\'s writing journey is unique and progress may vary. Patience encouragement and constructive feedback are key to addressing academic concerns related to writing. It is important to collaborate with teachers utilize available writing resources and consider seeking additional assistance from educators or writing specialists when necessary\n\n"
    "Common Academic Concerns Math\n\n"
    "Mathematical skills are essential for academic success and problem-solving abilities. Parents may encounter various academic concerns related to their child\'s math abilities. While each child\'s math development is unique here are some common academic concerns that parents may come across\n\n"
    "Difficulty with Basic Arithmetic Some children may struggle with basic arithmetic operations such as addition subtraction multiplication and division. Parents can assist their child by providing additional practice opportunities using manipulatives or visual aids and reinforcing math concepts through real-life examples\n\n
    "Trouble with Number Sense Number sense refers to a child\'s understanding of numbers their magnitude relationships and place value. Some children may have difficulty grasping these concepts which can impact their overall math performance. Parents can support their child by incorporating number sense activities into everyday life playing math games and using concrete materials to reinforce understanding\n\n"
    "Challenges with Problem Solving Problem-solving skills are crucial in math. Some children may struggle with analyzing problems identifying appropriate strategies and reaching solutions. Parents can help their child develop problem-solving skills by practicing different types of math problems together encouraging logical thinking and guiding them through step-by-step approaches\n\n"
    "Weakening Conceptual Understanding Math is not just about memorizing procedures but also understanding the underlying concepts. Some children may focus on rote memorization without truly comprehending the principles. Parents can promote conceptual understanding by relating math concepts to real-life situations encouraging explanations and reasoning and providing hands-on learning experiences\n\n"
    "Difficulty with Fractions and Decimals Fractions and decimals can be challenging for some children due to their abstract nature. Parents can help their child by using visual representations practicing fraction and decimal operations and relating these concepts to everyday examples such as sharing food or calculating money\n\n"
    "Struggles with Geometry Geometry involves understanding shapes angles spatial relationships and measurements. Some children may have difficulty visualizing geometric concepts. Parents can support their child by using manipulatives engaging in activities that involve building and exploring shapes and discussing real-world applications of geometry.\n\n"
    "Anxiety or Lack of Confidence Math anxiety or a lack of confidence can hinder a child's math performance. Parents can create a positive and supportive environment by celebrating small successes, encouraging a growth mindset and seeking opportunities for the child to build confidence through achievable math tasks.\n\n"
    "Remember that math skills develop over time with practice and support. Each child\'s math journey is unique and progress may vary. Patience, encouragement and a growth mindset are key to addressing academic concerns related to math. Collaborating with teachers, utilizing available math resources and considering additional assistance from educators or math specialists when needed can also be beneficial."
    </string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_haven_an_account">Already haven an account?</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="remember_your_password">Remember your password?</string>
    <string name="not_yet">Not yet.</string>
    <string name="information">Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="street_address">Street Address</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="number_of_children">Number of Children</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="child_of_concern_s_name">Child of concern\'s name</string>
    <string name="concerns">Concerns</string>
    <string name="city_or_town">City or Town</string>
    <string name="phone_number">Phone number</string>
</resources>