<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_setting"
        android:title="@string/settings"
        android:icon="@drawable/logout_foreground"
        app:showAsAction="never"
        android:onClick="settingsOnClick"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_login"
        android:title="@string/login"
        android:icon="@drawable/loginf_foreground"
        android:onClick="loginOnClick"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/logoutlogout_foreground"
        android:onClick="logoutOnClick"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_foreground"
        app:showAsAction="ifRoom"
        android:onClick="searchOnClick"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />
</menu>

