<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:includeFontPadding="true"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        android:padding="60dp"
        android:paddingBottom="60dp"/>

    <EditText
        android:id="@+id/email"
        android:padding="30sp"
        android:paddingTop="25dp"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/input"
        />
    <EditText
        android:id="@+id/password"
        android:padding="30sp"
        android:paddingTop="25dp"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/input"
        />
    
    <Button
        android:id="@+id/loginBtn"
        android:padding="30sp"
        android:paddingTop="25dp"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/black"
        android:background="@drawable/input"
        />
    <LinearLayout
        android:paddingTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <Button

            android:id="@+id/goToSignup"
            android:layout_width="230sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/don_t_have_an_account"
            android:backgroundTint="@color/colorPrimary"
            android:background="@drawable/input"
            />

    </LinearLayout>
    <LinearLayout
        android:paddingTop="40dp"
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/goToForgotPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/forgot_password"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/black"
            android:background="@drawable/input"
            />

    </LinearLayout>


</LinearLayout>