<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:paddingTop="50sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="#000000" />

    <TableLayout
        android:id="@+id/table"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="50dp">

        <TableRow
            android:id="@+id/row1"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">

            <TextView
                android:id="@+id/emailFieldText"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="0.5"
                android:padding="10dp"
                android:text="@string/enter_your_email"
                android:background="@drawable/input"
                android:textColor="#000000" />

        </TableRow>

        <TableRow
            android:id="@+id/row2">

            <EditText
                android:id="@+id/emailField"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_weight="0.5"
                android:padding="10dp"
                style="@android:style/Widget.EditText"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:shadowColor="@color/white"
                android:background="@drawable/input"
                />
        </TableRow>

    </TableLayout>
    <LinearLayout
        android:paddingTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <Button

            android:id="@+id/remeberpw"
            android:layout_width="230sp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/remember_your_password"
            android:backgroundTint="@color/colorPrimary"
            />
    </LinearLayout>
</LinearLayout>